[project]
name = "sorteberg-mcp"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.13.1",
    "fastapi>=0.115.0",
    "starlette>=0.41.0",
    "uvicorn[standard]>=0.32.0",
    "google-cloud-firestore>=2.19.0",
    "google-api-python-client>=2.108.0",
    "google-auth>=2.25.2",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "httpx>=0.27.0",
    "pypdf>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
sorteberg-mcp = "server:main"

